-Added "transformations" playback modifier group and moved "offset" into it.
-Added "transformations/scale" playback modifier (thanks to netcore10 for suggestion).
-Added "transformations/mirror" playback modifier (thanks to Sky for suggestion).
-Added "transformations/rotation" playback modifier.
-Added "entity_filter" playback modifier.
-Added setting "allow_ghosts" which enables usage of ghost players when using a "player_as_entity" modifier (true by default).
-Added setting "pretty_scene_files" which makes scene JSON files look pretty (true by default).
-Added setting "start_as_recorded" which makes playback of currently recorded player start as this player (false by default) (thanks to damiendier for suggestions).
-Added setting "block_allow_scaled" which allows playback of scaled block actions (false by default).
-Added setting "start_instantly" to start recording instantly instead of waiting for movement or second command (false by default) (thanks to Antimality for suggestion).
-Added setting "assign_player_name" to assign recorded player names to a recording (false by default).
-Added setting "show_tips" to enable/disable command tips (true by default).
-Settings are now divided into 3 categories - recording, playback and advanced.
-Merged "/mocap scenes list_elements" into "/mocap scenes list" and "/mocap scenes element_info" into "/mocap scenes info".
-Split "player_info" modifier into "player_name" and "player_skin".
-Removed position offset arguments from "/mocap scenes add_to".
-Replaced command "/mocap recording state" with "/mocap recording list".
-Replaced settings "trackVehicleEntities", "trackItemEntities" and "trackOtherEntities" with "track_entities".
-Replaced settings "playVehicleEntities", "playItemEntities" and "playOtherEntities" with "play_entities".
-Replaced "trackPlayedEntities" setting with "prevent_tracking_played_entities" (true by default) which better represents what it's actually doing.